--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,70 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
+
+}
+
 body {
-    background-color: rgb(185, 185, 185);
+    background-color: rgb(245, 245, 245);
+}
+
+header {
+    border: 2px solid rgb(19, 19, 19);
+    padding: 20px 0px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+
+.menu {
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+}
+
+
+nav ul li a {
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+    font-size: 24px;
+}
+
+nav {
+    width: 100%;
+}
+
+.razd {
+    display: flex;
+    gap: 10%;
+}
+
+
+.CreateForm {
+    width: 500px;
+    margin: 200px auto;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.CreateForm>form {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.CreateForm>form>button {
+    margin: 25px auto;
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: blue;
+    color: white;
 }
