--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -68,3 +68,43 @@ nav {
     background-color: blue;
     color: white;
 }
+
+.win-reg {
+    width: 500px;
+    margin: 200px auto;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+
+}
+
+.win-reg>form {
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-reg {
+    margin: 25px auto;
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: blue;
+    color: white;
+}
+
+.lab-reg {
+    display: flex;
+    flex-direction: column;
+}
+
+.inp-reg {
+}
+
+.btn-auth {
+    background: none; 
+    border: none; 
+    color: inherit; 
+    cursor: pointer; 
+    padding: 0;
+    font-size: 24px;
+}
