--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,9 +11,9 @@ body {
 }
 
 header {
-    border: 2px solid rgb(19, 19, 19);
+    border: 2px solid #181D27;
     padding: 20px 0px;
-
+    background-color: #69B578;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -31,7 +31,7 @@ header {
 nav ul li a {
     display: inline-block;
     text-decoration: none;
-    color: black;
+    color: #181D27;
     font-weight: 500;
     font-size: 24px;
 }
@@ -45,40 +45,46 @@ nav {
     gap: 10%;
 }
 
+.title-str {
+    padding: 50px 0 0 50px;
+}
 
-.CreateForm {
+.create-form {
     width: 500px;
     margin: 200px auto;
     border: 1px solid black;
     border-radius: 10px;
     padding: 10px;
+    background-color: #D0DB97
 }
 
-.CreateForm>form {
+.create-form>form {
     justify-content: center;
     display: flex;
     flex-direction: column;
 }
 
-.CreateForm>form>button {
+.create-form>form>button {
     margin: 25px auto;
     width: 150px;
     height: 50px;
     border-radius: 10px;
-    background-color: blue;
+    background-color: #254D32;
     color: white;
+    border: 0;
 }
 
 .win-reg {
-    width: 500px;
+    width: 400px;
     margin: 200px auto;
     border: 1px solid black;
     border-radius: 10px;
     padding: 10px;
-
+    background-color: #D0DB97;
 }
 
 .win-reg>form {
+    gap: 15px;
     display: flex;
     flex-direction: column;
 }
@@ -88,8 +94,9 @@ nav {
     width: 150px;
     height: 50px;
     border-radius: 10px;
-    background-color: blue;
+    background-color: #254D32;
     color: white;
+        border: 0;
 }
 
 .lab-reg {
@@ -98,6 +105,9 @@ nav {
 }
 
 .inp-reg {
+    margin-top: 5px;
+    padding-left: 5px;
+    height: 25px;
 }
 
 .btn-auth {
@@ -111,6 +121,109 @@ nav {
 
 .name-user {
     font-size: 24px;
-    color: blue;
+    color: #ffffff;
 }
 
+.tasks {
+    display: flex;
+    padding: 45px;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.task {
+    width: 300px;
+    background-color: #D0DB97;
+    border-radius: 5px;
+    padding: 10px 10px 20px 10px;
+}
+
+.btn-del {
+    margin: 25px auto;
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #254D32;
+    color: white;
+    border: 0;
+}
+
+.but {
+    display: flex;
+    width: 90%;
+    justify-content: end;
+}
+
+.task>h3 {
+    padding-bottom: 20px;
+    font-size: 24px;
+}
+
+.task>p {
+
+    font-size: 22px;
+}
+
+
+.success {
+    display: flex;
+    font-size: 24px;
+    justify-content: center;
+    height: 100px;
+    align-items: center;
+    border: 2px solid #3A7D44;
+    width: 250px;
+    margin: 20px auto;
+    text-align: center;
+    border-radius: 10px;
+    
+}
+
+
+.success>p {
+    
+}
+
+
+.addtxt {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.link {
+    text-decoration: none;
+    color: black;
+    padding-left: 5px;
+}
+
+.not-tasks {
+    display: flex;
+    font-size: 24px;
+    justify-content: center;
+    height: 100px;
+    align-items: center;
+    border: 2px solid #3A7D44;
+    width: 290px;
+    margin: 80px auto;
+    text-align: center;
+    border-radius: 10px;
+}
+
+
+.warning {
+    display: flex;
+    font-size: 24px;
+    justify-content: center;
+    height: 150px;
+    align-items: center;
+    border: 2px solid #3A7D44;
+    width: 290px;
+    margin: 80px auto;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.mes {
+    color: #a80000;
+}
